# TransVis

./: LICENSE  README.md  ToDo.txt  main.py  pyproject.toml  svg.html  svg.py  test.html
lib/: document.py  grid.py  grid_opps.py  grid_ops.py  line.py  line_ops.py  svg.py  types.py  vec_ops.py  vector.py
