[project]
name = "transvis"
version = "0.1.0"
description = "Animated SVG visualization utilities"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.25",
    "matplotlib>=3.8",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
